Web app complete 10.6

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "source": [
     "# Use the base URL to create an absolute URL\r\n",
     "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\r\n",
@@ -218,8 +218,15 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 34
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Mars Facts"
    ],
    "metadata": {}
   },
